# uav-air-reach-ros2

./: .gitignore  .gitmodules  02第二阶段布局md.md  README.md
deliverables/: project-audit.json  project-summary.md  run-report.txt  status.html  task-status.json  task-summary.md
deliverables/stage2/: project-audit.json  project-summary.md  run-report.txt  status.html  task-status.json
px4_ros2_ws/: AGENTS.md  BASIC_CONTROL_DEMOS.md  OFFBOARD_HOVER_EXPERIMENT.md  TOOLS_AND_SCRIPTS_GUIDE.md  codex.md  run_codex_queue.sh
px4_ros2_ws/codex-logs/: stage2-task-descriptions-zh.md
px4_ros2_ws/codex-tasks/: 001-audit-project-structure.md  002-standardize-demo-visualization.md  003-add-demo-regression-checks.md  004-design-uav-control-api.md  005-plan-uav-arm-simulation.md  006-implement-uav-control-bridge.md  007-add-uav-state-feedback.md  008-add-uav-bridge-demo-and-checks.md  009-document-uav-bridge-usage.md  010-download-stage2-materials.md  011-audit-stage2-environment.md  012-create-aerial-manip-packages.md  013-add-x500-arm-2dof-model.md  014-add-arm-ros2-control-loop.md  015-add-arm-control-bridge.md  016-add-state-aggregator-and-tf-baseline.md  017-add-front-camera-and-ros-gz-bridge.md  018-add-tag-target-pose-estimation.md  019-add-uav-arm-approach-coordinator.md  020-add-episode-recorder-and-lerobot-export.md  021-add-lerobot-baseline-training-and-policy-bridge.md  022-add-air-reach-demo-and-regression.md  023-stage2-environment-preflight.md  024-normalize-2dof-arm-interface.md  025-repair-arm-ros2-control-integration.md  026-add-frame-and-schema-regression.md  027-harden-vision-bridge-smoke.md  028-harden-live-stack-and-demo10.md  029-add-stage2-evidence-validator.md  030-refresh-project-status-deliverables.md  031-install-and-verify-live-dependencies.md  032-verify-camera-bridge-and-sample-frame.md  033-verify-live-arm-control-and-demo10-smoke.md  034-run-full-live-demo10-and-record-evidence.md  035-generate-demo10-visualizations.md  036-build-simulation-showcase-deliverable.md  037-advanced-visualization-architecture.md  038-build-demo10-advanced-3d-replay.md  039-build-flight-comparison-3d-visuals.md  040-add-2d-diagnostics-dashboard.md  (+2 more)
px4_ros2_ws/deliverables/: project-audit.json  project-summary.md  run-report.txt  simulation_showcase.html  status.html  task-status.json  task-summary.md
px4_ros2_ws/src/aerial_manip_control/: package.xml  setup.cfg  setup.py
px4_ros2_ws/src/aerial_manip_control/aerial_manip_control/: __init__.py  approach_coordinator.py  arm_control_bridge.py  stage2_schema.py  state_aggregator.py
px4_ros2_ws/src/aerial_manip_control/config/: arm_controllers.yaml
px4_ros2_ws/src/aerial_manip_control/launch/: arm_control.launch.py
px4_ros2_ws/src/aerial_manip_gazebo/: CMakeLists.txt  package.xml
px4_ros2_ws/src/aerial_manip_gazebo/config/: front_camera_bridge.yaml
px4_ros2_ws/src/aerial_manip_gazebo/launch/: front_camera_bridge.launch.py
px4_ros2_ws/src/aerial_manip_gazebo/models/fiducial_target_aruco/: model.config  model.sdf
px4_ros2_ws/src/aerial_manip_gazebo/models/x500_arm_2dof/: model.config  model.sdf
px4_ros2_ws/src/aerial_manip_gazebo/scripts/: smoke_load_x500_arm_2dof.sh
px4_ros2_ws/src/aerial_manip_gazebo/worlds/: x500_arm_2dof_smoke.sdf
px4_ros2_ws/src/aerial_manip_msgs/: CMakeLists.txt  package.xml
px4_ros2_ws/src/aerial_manip_msgs/action/: Approach.action
px4_ros2_ws/src/aerial_manip_msgs/msg/: ArmCommand.msg  ArmState.msg  PlatformState.msg  SafetyStatus.msg  SystemObservation.msg  TaskStatus.msg
scripts/: start_codex_remote.sh
(+87 files in other folders)
