<?xml version="1.0"?>
<package format="3">
  <name>aerial_manip_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo launch, configuration, model, and world assets for stage-2 aerial manipulation.</description>
  <maintainer email="clcwork@example.com">clcwork</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
