<?xml version="1.0"?>
<package format="3">
  <name>aerial_manip_msgs</name>
  <version>0.0.1</version>
  <description>Minimal ROS 2 interfaces for stage-2 aerial manipulation tasks.</description>
  <maintainer email="clcwork@example.com">clcwork</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
